# specs/openapi.yaml
@@ -22,6 +22,15 @@ components:
       type: string
       pattern: ^[0-9]+$
       description: Integer encoded as a string to preserve precision (e.g., uint256)
+    OrderType:
+      anyOf:
+        - type: string
+          enum:
+            - swap-buy
+        - type: string
+          enum:
+            - swap-sell
+      description: Closed list defining how providers must interpret amounts for swaps. "swap-sell" means exact-input (spend exactly the input amounts). "swap-buy" means exact-output (receive exactly the output amounts). To include more options the API will be extended in the future.
     AssetLockReference:
       type: object
       properties:
@@ -200,6 +209,15 @@ components:
               - receiver
               - asset
               - amount
+        orderType:
+          anyOf:
+            - type: string
+              enum:
+                - swap-buy
+            - type: string
+              enum:
+                - swap-sell
+          description: Closed list defining how providers must interpret amounts for swaps. "swap-sell" means exact-input (spend exactly the input amounts). "swap-buy" means exact-output (receive exactly the output amounts). To include more options the API will be extended in the future.
         minValidUntil:
           type: number
         preference:
@@ -627,6 +645,15 @@ paths:
                       - receiver
                       - asset
                       - amount
+                orderType:
+                  anyOf:
+                    - type: string
+                      enum:
+                        - swap-buy
+                    - type: string
+                      enum:
+                        - swap-sell
+                  description: Closed list defining how providers must interpret amounts for swaps. "swap-sell" means exact-input (spend exactly the input amounts). "swap-buy" means exact-output (receive exactly the output amounts). To include more options the API will be extended in the future.
                 minValidUntil:
                   type: number
                 preference:
